--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>  
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>Hey there, I'm Tan! Excited to have you checking out my portfolio! Get ready for a rollercoaster of creativity and passion. This isn't just a showcase, it's a vibe. From wild ideas to bringing them to life, I'm all about that hands on, "let's make it happen" energy. Each project is a piece of my heart, and I can't wait to share the journey with you. Buckle up for an adventure through my work where imagination meets reality. Ready to dive in? Let's do this!</p>
+                <p>Hey there! I'm Christian Buena, a 20-year-old dynamo from the beautiful Philippines, and I'm here to bring some serious positive vibes to your screen. Buckle up as I take you on a journey through my world of creativity and innovation. From the heart of the Philippines, I'm not just speaking English, I'm crafting a language of inspiration through my work. Ready for a dose of optimism and energy? Let's dive into the vibrant tapestry of my portfolio  where dreams meet reality, and where the future looks seriously bright!</p>
             <div class="tab-titles">
                 <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                 <p class="tab-links" onclick="opentab('experience')">Experience</p>
